--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "bluebird": "^3.4.7",
     "chalk": "^1.1.3",
     "fs-extra": "^3.0.1",
-    "googleapis": "^35.0.0",
+    "googleapis": "git+https://github.com/mainephd/google-api-nodejs-client.git#be3a42ec6ec7c39d9bb9b9009ebb0cba45cd582f",
     "lodash": "^4.17.4"
   },
   "devDependencies": {
